--- a/client/scss/core/_root.scss
+++ b/client/scss/core/_root.scss
@@ -37,6 +37,5 @@ body {
   .next-wrapper,
   #__next {
     height: 100%;
-    overflow: hidden;
   }
 }
